--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,8 @@
     <header>
       <h1>Metric/Imperial Converter</h1>
     </header>
-    <hr style='margin: 50px'>
-    <section>
+    <hr style="margin: 50px">
+    <section class="example">
       <h3>Example usage</h3>
       <code>/api/convert?input=4gal</code><br>
       <code>/api/convert?input=1/2km</code><br>
@@ -23,16 +23,16 @@
       <h3>Example return</h3>
       <code>{ initNum: 3.1, initUnit: 'mi', returnNum: 4.98895, returnUnit: 'km', string: '3.1 miles converts to 4.98895 kilometers' }</code>
     </section>
-    <hr style='margin: 50px'>
-    <section>
-      <div id='testui' >
+    <hr style="margin: 50px">
+    <section class="example">
+      <div id="testui">
         <h3 style="text-align: left">Front-End</h3>
         <form id="convertForm" class="border">
           <input type="text" id="convertField" name="input" placeholder="3.1mi" style="width: 200px">
-          <input id="convert" type="submit" value='Convert!'>
+          <input id="convert" type="submit" value="Convert!">
         </form>
-        <p id='result'></p>
-        <code id='jsonResult'></code>
+        <p id="result"></p>
+        <code id="jsonResult"></code>
       </div>
     </section>
     <!-- Your web-app is https, so your scripts need to be too -->
