--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Metric/Imperial Converter</title>
-    <meta name="description" content="An example of the Free Code Camp Metric/Imperial Converter Project">
-    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./public/style.css">
-  </head>
-  <body>
-    <header>
-      <h1>Metric/Imperial Converter</h1>
-    </header>
-    <hr style="margin: 50px">
+
+<head>
+	<title>Metric/Imperial Converter</title>
+	<meta name="description" content="An example of the Free Code Camp Metric/Imperial Converter Project">
+	<link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="./public/style.css">
+</head>
+
+<body>
+	<header>
+		<h1 class="txt-white">Metric/Imperial Converter</h1>
+	</header>
+	<hr style="margin: 30px">
+	<section class="example">
+		<div id="testui">
+			<!-- <h3 style="text-align: left">Front-End</h3> -->
+			<form id="convertForm" class="border">
+				<input type="text" id="convertField" name="input" class="field" placeholder="3.1mi" style="width: 200px">
+          <input id="convert" type="submit" value="Convert!" class="btn">
+        </form>
+        <p id="result" class="txt-center"></p>
+     <div> <code id="jsonResult"></code></div>
+      </div>
+    </section>
     <section class="example">
       <h3>Example usage</h3>
       <code>/api/convert?input=4gal</code><br>
@@ -22,19 +35,7 @@
       <code>/api/convert?input=kg</code><br>
       <h3>Example return</h3>
       <code>{ initNum: 3.1, initUnit: 'mi', returnNum: 4.98895, returnUnit: 'km', string: '3.1 miles converts to 4.98895 kilometers' }</code>
-    </section>
-    <hr style="margin: 50px">
-    <section class="example">
-      <div id="testui">
-        <h3 style="text-align: left">Front-End</h3>
-        <form id="convertForm" class="border">
-          <input type="text" id="convertField" name="input" placeholder="3.1mi" style="width: 200px">
-          <input id="convert" type="submit" value="Convert!">
-        </form>
-        <p id="result"></p>
-        <code id="jsonResult"></code>
-      </div>
-    </section>
+    </section>    
     <!-- Your web-app is https, so your scripts need to be too -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
